[tool.poetry]
name = "knot-protocol-python"
version = "0.1.0"
description = ""
authors = ["Janael Pinheiro <ajp@cesar.org.br>"]
readme = "README.md"
packages = [{include = "knot_protocol_python"}]

[tool.poetry.dependencies]
python = "^3.10"
marshmallow = "^3.19.0"
pyyaml = "^6.0"
tenacity = "^8.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pika = "^1.3.1"
coverage = "^7.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
